# boids

./: Cargo.toml  index.html  justfile
pkg/: boids.d.ts  boids.js  boids_bg.wasm  boids_bg.wasm.d.ts  package.json
src/: boid.rs  lib.rs  screen_state.rs  shader.wgsl  state.rs  vector.rs  vertex.rs
